--- a/resume.html
+++ b/resume.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title>Jai Resume</title>
+    <title>Jaikeerthi - Coducer Technologies</title>
     <style>
       body{
         font-family: georgia , "Times New Roman",Times,serif;
         line-height: 25px;
-        font-size: 16px; 
+        font-size: 16px;
         color: #333;
         margin: 0px;
       }
@@ -105,7 +105,7 @@
         <br />
         <strong>Markups:</strong> XHTML / Html5, CSS2 / CSS3
         <br />
-        <strong>Frameworks:</strong> Ruby on Rails(Ruby), Compass / Blueprint (CSS), JQuery(Javascript)
+        <strong>Frameworks:</strong> Ruby on Rails(Ruby), Compass / Blueprint (CSS), JQuery(Javascript), Phonegap(Mobile), Backbone(Javascript), Angular.js(Javascript)
         <br />
       </div>
       <br />
@@ -114,16 +114,190 @@
       <hr />
       <div class='work'>
         <h4>
-          <span class="left">Application Developer - Activesphere Technologies</span> 
-          <span  class="right">Sep 2011 - Present</span></h4>
+          <span class="left">Founder & CEO - Eatwithus Technologies Pvt. Ltd.</span>
+          <span  class="right">Dec 2012 - Present</span></h4>
         <div class="clear"></div>
         <ol>
           <li>
+            <div class="project_title">Eatwithus (<a href="http://www.eatwithus.in/">http://www.eatwithus.in/</a>)</div>
+            <div class='description'>
+              Played severel role including Design, Develop & Implemenation of online food ordering system for 2 major cities in India.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Angular.js + Rails 4 with Ruby 2.0.0 hosted on Unicorn + Nginx, with Mysql.
+                </li>
+                <li>
+                  Tire for full text Search.
+                </li>
+                <li>
+                  Jquery as needed.
+                </li>
+                <li>
+                  Integrated Facebook, Google + Login.
+                </li>
+                <li>
+                  Google map based geo search.
+                </li>
+                <li>
+                  Secure Payment Gateway integration with CCAvenue and ActiveMerchant
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="project_title">Managewithus (<a href="http://www.managewithus.in/">http://www.managewithus.in/</a>)</div>
+            <div class='description'>
+              Played severel role including Design, Develop & Implemenation of end to end restaurant management & branding system.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Rails 4 with Ruby 2.0.0 hosted on Unicorn + Nginx, with Mysql.
+                </li>
+                <li>
+                  Http based restful api
+                </li>
+                <li>
+                  Jquery and Jquery UI for ajax.
+                </li>
+                <li>
+                  Redis & Resque for delayed Job
+                </li>
+                <li>
+                  Google map based geo search.
+                </li>
+                <li>
+                  Socket.io for pubsub service.
+                </li>
+                <li>
+                  Secure Payment Gateway integration with CCAvenue and ActiveMerchant
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ol>
+      </div>
+
+      <div class='work'>
+        <h4>
+          <span class="left">Architect - Coducer Technologies</span>
+          <span  class="right">Dec 2012 - Present</span></h4>
+        <div class="clear"></div>
+        <ol>
+          <li>
+            <div class="project_title">Platerate (<a href="http://107.170.13.77/">http://107.170.13.77/</a>)</div>
+            <div class='description'>
+              Analysed, architected and Develop, tablet based restaurant rating and analytical engine.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Rails 4 with Ruby 2.1.0 hosted on Unicorn + Nginx, with Mysql.
+                </li>
+                <li>
+                  Http based restful api.
+                </li>
+                <li>
+                  Phonegap + Jquery Mobile to build tablet application for Android & Ipad.
+                </li>
+                <li>
+                  Graphical analytics + charts using Google Chart Api.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="project_title">Bestfrent (<a href="http://alpha.bestfrent.com/">http://alpha.bestfrent.com/</a>)</div>
+            <div class='description'>
+              Analysed, architected and Develop, an online property search engine for specific geographic location.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Angular + Rails 4 with Ruby 2.1.0 hosted on Unicorn + Nginx, with Mysql.
+                </li>
+                <li>
+                  Tire for full text Search.
+                </li>
+                <li>
+                  Jquery plugins as needed.
+                </li>
+                <li>
+                  Google Maps integration for geo graphic saerch
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="project_title">Carpeta (<a href="http://www.carpeta.us/">http://www.carpeta.us/</a>)</div>
+            <div class='description'>
+              Analysed and Develop, Application for social network for closed environment.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Rails 3 with Ruby 2.0.0 hosted on Unicorn + Nginx, with Mysql.
+                </li>
+                <li>
+                  Tire for full text Search.
+                </li>
+                <li>
+                  Jquery and Jquery UI for ajax.
+                </li>
+                <li>
+                  Integrated Facebook Application
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ol>
+      </div>
+
+     <div class='work'>
+        <h4>
+          <span class="left">Application Developer - Activesphere Technologies</span>
+          <span  class="right">Sep 2011 - Dec 2012</span></h4>
+        <div class="clear"></div>
+        <ol>
+          <li>
+            <div class="project_title">Bountyme (<a href="http://www.bountyme.com/">http://www.bountyme.com/</a>)</div>
+            <div class='description'>
+              Designed and Develop, Application for social job recrutement portal.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Rails 3 with Ruby 1.9.3 hosted on Unicorn + Nginx, with Mysql.
+                </li>
+                <li>
+                  Tire for full text Search.
+                </li>
+                <li>
+                  Jquery and Jquery UI for ajax.
+                </li>
+                <li>
+                  Integrated Facebook, Twitter and Linkedin Api's.
+                </li>
+                <li>
+                  Implemented Oauth support to authenticate at other applications.
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
             <div class="project_title">JustbooksClC (<a href="http://www.justbooksclc.com/">http://www.justbooksclc.com/</a>)</div>
             <div class='description'>
-              Designed and Develop, Application for online book store management system, for reviewing, ordering and renting books online. 
+              Designed and Develop, Application for online book store management system, for reviewing, ordering and renting books online.
               <div class="clear"></div>
-              Technology used, 
+              Technology used,
               <div class="clear"></div>
               <ul>
                 <li>
@@ -150,9 +324,9 @@
           <li>
             <div class="project_title">Brandscope</div>
             <div class='description'>
-              Designed and Develop, Merchandise website to bring supplier and retailer togather. 
+              Designed and Develop, Merchandise website to bring supplier and retailer togather.
               <div class="clear"></div>
-              Technology used, 
+              Technology used,
               <div class="clear"></div>
               <ul>
                 <li>
@@ -172,16 +346,16 @@
 
       <div class='work'>
         <h4>
-          <span class="left">Associate Developer - Artha42 Innovations Pvt Ltd</span> 
+          <span class="left">Associate Developer - Artha42 Innovations Pvt Ltd</span>
           <span  class="right">Aug 2010 - Sep 2011</span></h4>
         <div class="clear"></div>
         <ol>
           <li>
             <div class="project_title">PHR Health Connect (<a href="https://www.apolloprism.com/">https://www.apolloprism.com/</a>, <a href="https://dell.phrhealthconnect.com/">https://dell.phrhealthconnect.com/</a>)</div>
             <div class='description'>
-              Designed and Developed, a web based application, which creates and interconnects parients and doctors among different zone to communicate securely. 
+              Designed and Developed, a web based application, which creates and interconnects parients and doctors among different zone to communicate securely.
               <div class="clear"></div>
-              Technology used, 
+              Technology used,
               <div class="clear"></div>
               <ul>
                 <li>
@@ -208,9 +382,9 @@
           <li>
             <div class="project_title">Claps and Boos(<a href="http://clapsandboos.com/">http://clapsandboos.com/</a>)</div>
             <div class='description'>
-              Worked on mainting and enhancement of a movie review website clapsandboos. 
+              Worked on mainting and enhancement of a movie review website clapsandboos.
               <div class="clear"></div>
-              Technology used, 
+              Technology used,
               <div class="clear"></div>
               <ul>
                 <li>
@@ -224,7 +398,7 @@
                 </li>
               </ul>
             </div>
-          </li>                
+          </li>
 
         </ol>
       </div>
@@ -233,8 +407,8 @@
       <hr />
       <div class='work'>
         <h4>
-          <span class="left">Bachelor of Engineering</span> 
-          <span class="right">2006 - 2010</span> 
+          <span class="left">Bachelor of Engineering</span>
+          <span class="right">2006 - 2010</span>
         </h4>
         <div class="clear"></div>
         <div class="description">
