--- a/resume.html
+++ b/resume.html
@@ -115,7 +115,7 @@
       <div class='work'>
         <h4>
           <span class="left">Founder & CEO - Eatwithus Technologies Pvt. Ltd.</span>
-          <span  class="right">Dec 2012 - Present</span></h4>
+          <span  class="right">Sep 2012 - Present</span></h4>
         <div class="clear"></div>
         <ol>
           <li>
@@ -184,7 +184,7 @@
 
       <div class='work'>
         <h4>
-          <span class="left">Architect - Coducer Technologies</span>
+          <span class="left">CEO - Coducer Technologies</span>
           <span  class="right">Dec 2012 - Present</span></h4>
         <div class="clear"></div>
         <ol>
