updated contact info

--- a/resume.html
+++ b/resume.html
@@ -85,13 +85,13 @@
       </div>
       <div class="right">
         <div class="label">Email:</div>
-        <a href="mailto:me@jaikeerthi.in" class="content">me@jaikeerthi.in</a>
+        <a href="mailto:jai@coducer.com" class="content">jai@coducer.com</a>
         <br />
         <div class="label">Blog:</div>
         <a href="http://jaikeerthi.in"  class="content">http://jaikeerthi.in</a>
         <br />
         <div class="label">Mobile:</div>
-        <div  class="content">+919741449619</div>
+        <div  class="content">+91 7760054546</div>
       </div>
     </header>
     <div class='clear'></div>
