--- a/resume.html
+++ b/resume.html
@@ -184,12 +184,35 @@
 
       <div class='work'>
         <h4>
-          <span class="left">CEO - Coducer Technologies</span>
+          <span class="left">Developer / Business Execution - Coducer Technologies</span>
           <span  class="right">Jan 2013 - Present</span></h4>
         <div class="clear"></div>
         <ol>
+          <!-- <li> -->
+          <!--   <div class="project_title">BMTC - Mobile App</div> -->
+          <!--   <div class='description'> -->
+          <!--     Building Mobile application for BMTC commuters -->
+          <!--     <div class="clear"></div> -->
+          <!--     Technology used, -->
+          <!--     <div class="clear"></div> -->
+          <!--     <ul> -->
+          <!--       <li> -->
+          <!--         Rails 4 with Ruby 2.1.1 hosted on Unicorn + Nginx, with Mysql. -->
+          <!--       </li> -->
+          <!--       <li> -->
+          <!--         Http based restful api. -->
+          <!--       </li> -->
+          <!--       <li> -->
+          <!--         Native Android / IOS / Windows Applications. -->
+          <!--       </li> -->
+          <!--       <li> -->
+          <!--         Integrated with BMTC Website (http://www.mybmtc.com) -->
+          <!--       </li> -->
+          <!--     </ul> -->
+          <!--   </div> -->
+          <!-- </li> -->
           <li>
-            <div class="project_title">Platerate (<a href="http://107.170.13.77/">http://107.170.13.77/</a>)</div>
+            <div class="project_title">Platerate (<a href="http://www.statisticallydifferent.com/">http://www.statisticallydifferent.com/</a>)</div>
             <div class='description'>
               Analysed, architected and Develop, tablet based restaurant rating and analytical engine.
               <div class="clear"></div>
