updated email in resume

--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,7 @@
       </div>
       <div class="right">
         <div class="label">Email:</div>
-        <a href="mailto:jai@coducer.com" class="content">jai@coducer.com</a>
+        <a href="mailto:haiiamjai@gmail.com" class="content">haiiamjai@gmail.com</a>
         <br />
         <div class="label">Blog:</div>
         <a href="http://jaikeerthi.in"  class="content">http://jaikeerthi.in</a>
