--- a/resume.html
+++ b/resume.html
@@ -127,7 +127,7 @@
               <div class="clear"></div>
               <ul>
                 <li>
-                  Angular.js + Rails 4 with Ruby 2.0.0 hosted on Unicorn + Nginx, with Mysql.
+                  Angular.js + Rails 4 with Ruby 2.0.0 hosted on Unicorn + Nginx, with MongoDb.
                 </li>
                 <li>
                   Tire for full text Search.
@@ -156,7 +156,7 @@
               <div class="clear"></div>
               <ul>
                 <li>
-                  Rails 4 with Ruby 2.0.0 hosted on Unicorn + Nginx, with Mysql.
+                  Rails 4 with Ruby 2.0.0 hosted on Unicorn + Nginx, with MongoDb.
                 </li>
                 <li>
                   Http based restful api
