--- a/resume.html
+++ b/resume.html
@@ -87,9 +87,9 @@
         <div class="label">Email:</div>
         <a href="mailto:haiiamjai@gmail.com" class="content">haiiamjai@gmail.com</a>
         <br />
-        <div class="label">Blog:</div>
-        <a href="http://jaikeerthi.in"  class="content">http://jaikeerthi.in</a>
-        <br />
+        <!-- <div class="label">Blog:</div> -->
+        <!-- <a href="http://jaikeerthi.in"  class="content">http://jaikeerthi.in</a> -->
+        <!-- <br /> -->
         <div class="label">Mobile:</div>
         <div  class="content">+91 7760054546</div>
       </div>
@@ -101,7 +101,7 @@
       <span class="title">Technical Expertise</span>
       <hr />
       <div class='work'>
-        <strong>Programming Languages:</strong> Ruby, Node.js, C#, Java(Android)
+        <strong>Programming Languages:</strong> Ruby, Node.js, Java(Android), PHP
         <br />
         <strong>Markups:</strong> XHTML / Html5, CSS2 / CSS3
         <br />
@@ -114,8 +114,71 @@
       <hr />
       <div class='work'>
         <h4>
+          <span class="left">Senior Product Engineer - Scripbox.com</span>
+          <span  class="right">Feb 2016 - Present</span></h4>
+        <div class="clear"></div>
+        <ol>
+          <li>
+            <div class="project_title">Milkyway (<a href="http://www.scripbox.com/">http://www.scribox.com/</a>)</div>
+            <div class='description'>
+              Handled technology around backoffice and order processing includes support, order generation & document collection.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Rails 3 with Ruby 2.0.0 hosted on Unicorn + Nginx, with Mysql.
+                </li>
+                <li>
+                  Elasticsearch for full text Search.
+                </li>
+                <li>
+                  Jquery as needed.
+                </li>
+                <li>
+                  Integrated Google + Login.
+                </li>
+                <li>
+                  Redis & Sidekiq for delayed jobs
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="project_title">Delivery Tracking Mobile App</div>
+            <div class='description'>
+              Build HTML5 based mobile application for tracking and processing document collection realtime.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  IonicFramework + Angular.js framework
+                </li>
+                <li>
+                  Http based restful api
+                </li>
+                <li>
+                  Jquery and Jquery UI for ajax.
+                </li>
+                <li>
+                  Builds on top of cordova.
+                </li>
+                <li>
+                  Google map based geo search.
+                </li>
+                <li>
+                  Firebase for realtime data sync.
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ol>
+      </div>
+      <div class='work'>
+        <h4>
           <span class="left">Founder & CEO - Eatwithus Technologies Pvt. Ltd.</span>
-          <span  class="right">Sep 2013 - Present</span></h4>
+          <span  class="right">Sep 2013 - Feb 2016</span></h4>
         <div class="clear"></div>
         <ol>
           <li>
@@ -450,15 +513,15 @@
         <ul>
           <li>
             <div class="label">Git Hub:</div>
-            <a href="https://github.com/kjaikeerthi"> kjaikeerthi </a>
+            <a href="https://github.com/kjaikeerthi" target="_blank"> https://github.com/kjaikeerthi </a>
           </li>
           <li>
             <div class="label">Twitter: </div>
-            <a href="https://twitter.com/#!/kjaikeerthi"> kjaikeerthi </a>
+            <a href="https://twitter.com/#!/kjaikeerthi" target="_blank"> https://twitter.com/kjaikeerthi </a>
           </li>
           <li>
             <div class="label">LinkedIn:</div>
-            <a href="http://in.linkedin.com/in/kjaikeerthi"> kjaikeerthi </a>
+            <a href="http://in.linkedin.com/in/kjaikeerthi" target="_blank"> http://in.linkedin.com/in/kjaikeerthi </a>
           </li>
         </ul>
       </div>
