--- a/resume.html
+++ b/resume.html
@@ -114,8 +114,44 @@
       <hr />
       <div class='work'>
         <h4>
+          <span class="left">Independent Consultant</span>
+          <span  class="right">Nov 2017 - Present</span></h4>
+        <div class="clear"></div>
+        <ol>
+          <li>
+            <div class="project_title">Explore Life Travelling (<a href="https://www.explorelifetraveling.com/">https://www.explorelifetraveling.com/</a>)</div>
+            <div class='description'>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  React, Redux
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <div class="project_title">Sleekr (<a href="https://sleekr.co/">https://sleekr.co/</a>)
+              <div class='description'>
+                Worked on improving code quality, building and enhancing existing features.
+              <div class="clear"></div>
+              Technology used,
+              <div class="clear"></div>
+              <ul>
+                <li>
+                  Angular 2, RxJS
+                </li>
+                <li>
+                  Php based restful API
+                </li>
+              </ul>
+            </div>
+          </li>
+        </ol>
+      </div>      <div class='work'>
+        <h4>
           <span class="left">Senior Product Engineer - Scripbox.com</span>
-          <span  class="right">Feb 2016 - Present</span></h4>
+          <span  class="right">Feb 2017 - Nov 2016</span></h4>
         <div class="clear"></div>
         <ol>
           <li>
