--- a/resume.html
+++ b/resume.html
@@ -121,17 +121,25 @@
           <li>
             <div class="project_title">Explore Life Travelling (<a href="https://www.explorelifetraveling.com/">https://www.explorelifetraveling.com/</a>)</div>
             <div class='description'>
-              Technology used,
-              <div class="clear"></div>
-              <ul>
-                <li>
-                  React, Redux
-                </li>
-              </ul>
+                Played a role on Design, Develop & Implemenation online property booking platform.
+                <div class="clear"></div>
+                Technology used,
+                <div class="clear"></div>
+                <ul>
+                    <li>
+                        React, Redux
+                    </li>
+                    <li>
+                        Python, Django based Restful api
+                    </li>
+                    <li>
+                        Google map based geo search.
+                    </li>
+                </ul>
             </div>
           </li>
           <li>
-            <div class="project_title">Sleekr (<a href="https://sleekr.co/">https://sleekr.co/</a>)
+            <div class="project_title">Sleekr (<a href="https://sleekr.co/">https://sleekr.co/</a>)</div>
               <div class='description'>
                 Worked on improving code quality, building and enhancing existing features.
               <div class="clear"></div>
@@ -142,7 +150,10 @@
                   Angular 2, RxJS
                 </li>
                 <li>
-                  Php based restful API
+                  Php, Laravel based Restful api
+                </li>
+                <li>
+                    Hosted on Nginx, with Mysql.
                 </li>
               </ul>
             </div>
