--- a/resume.html
+++ b/resume.html
@@ -105,7 +105,7 @@
         <br />
         <strong>Markups:</strong> XHTML / Html5, CSS2 / CSS3
         <br />
-        <strong>Frameworks:</strong> Ruby on Rails(Ruby), Compass / Blueprint (CSS), JQuery(Javascript), Phonegap(Mobile), Backbone(Javascript), Angular.js(Javascript)
+        <strong>Frameworks:</strong> Ruby on Rails(Ruby), Compass / Blueprint (CSS), JQuery(Javascript), Phonegap(Mobile), Backbone(Javascript), Angular.js / React (Javascript)
         <br />
       </div>
       <br />
