--- a/resume.html
+++ b/resume.html
@@ -295,7 +295,7 @@
       <div class='work'>
         <h4>
           <span class="left">Developer / Business Execution - Coducer Technologies</span>
-          <span  class="right">Jan 2013 - Present</span></h4>
+          <span  class="right">Jan 2013 - Feb 2016</span></h4>
         <div class="clear"></div>
         <ol>
           <li>
