--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Jaikeerthi - Coducer Technologies</title>
+    <title>Jaikeerthi K - Computer Vision / Product / Architect </title>
     <style>
       body{
         font-family: georgia , "Times New Roman",Times,serif;
@@ -97,15 +97,14 @@
     <div class='clear'></div>
     <hr />
     <div id='main'>
-
       <span class="title">Technical Expertise</span>
       <hr />
       <div class='work'>
-        <strong>Programming Languages:</strong> Ruby, Node.js, Java(Android), PHP
+        <strong>Programming Languages:</strong> Ruby, Node.js, Python, PHP
         <br />
         <strong>Markups:</strong> XHTML / Html5, CSS2 / CSS3
         <br />
-        <strong>Frameworks:</strong> Ruby on Rails(Ruby), Compass / Blueprint (CSS), JQuery(Javascript), Phonegap(Mobile), Backbone(Javascript), Angular.js / React (Javascript)
+        <strong>Frameworks:</strong> Ruby on Rails(Ruby), Compass / Blueprint (CSS), JQuery(Javascript), Phonegap(Mobile), Backbone(Javascript), Angular.js / React (Javascript) / Computer Vision ( Amazon Rekognition & Azure Cognitive Service)
         <br />
       </div>
       <br />
@@ -114,8 +113,113 @@
       <hr />
       <div class='work'>
         <h4>
+          <span class="left">Co Founder & CEO - thirai.io</span>
+          <span  class="right">Dec 2018 - Present</span></h4>
+        <div class="clear"></div>
+        <ol>
+          <li>
+            <div class="project_title">Advertising Platform (<a href="https://www.thirai.io/">https://www.thirai.io/</a>)</div>
+            <div class='description'>
+                Played a role on Ideation, Develop, Implemenation of ofline programatic adverting platform.
+                <div class="clear"></div>
+                Technology used,
+                <div class="clear"></div>
+                <ul>
+                    <li>
+                        React / Redux
+                    </li>
+                    <li>
+                        Ruby on Rails
+                    </li>
+                    <li>
+                        Google map based geo search.
+                    </li>
+                    <li>
+                      Hosted on Nginx, with Postgresql.
+                    </li>
+                </ul>
+            </div>
+          </li>
+          <li>
+            <div class="project_title">Content Management Box (<a href="https://www.thirai.io/">https://www.thirai.io/</a>)</div>
+            <div class='description'>
+                Played a role on Development & Implemenation of hardware to manage content on LED / Thirai Smart Screen.
+                <div class="clear"></div>
+                Technology used,
+                <div class="clear"></div>
+                <ul>
+                    <li>
+                      PyQt with Python 3.6
+                    </li>
+                    <li>
+                      Api integration with Adverting platform
+                    </li>
+                </ul>
+            </div>
+          </li>
+          <li>
+            <div class="project_title">Computer Vision & Data management platform for Thirai.io (<a href="https://www.thirai.io/">https://www.thirai.io/</a>)</div>
+            <div class='description'>
+                Played a role on Architecture, Development of AI based data management engine.
+                <div class="clear"></div>
+                Technology used,
+                <div class="clear"></div>
+                <ul>
+                    <li>
+                      Python 3.7 with Tensorflow & YOLO V3
+                    </li>
+                    <li>
+                      Integation with Amazon Rekognition services
+                    </li>
+                    <li>
+                      Integation with Azure Cognitive Services
+                    </li>
+                    <li>
+                      Build as distributed edge environment which sync with cloud based data lakes
+                    </li>
+                    <li>
+                      Handled data with DynamoDB & MongoDb.
+                    </li>
+                </ul>
+            </div>
+          </li>
+        </ol>
+      </div>
+      <div class='work'>
+        <h4>
+          <span class="left">Product Head - fibre2fashion.com</span>
+          <span  class="right">Oct 2017 - Nov 2018</span></h4>
+        <div class="clear"></div>
+        <ol>
+          <li>
+            <div class="project_title">ECAAS (E-Commerce As A Service) (<a href="https://www.fibre2fashion.com/fashion-accelerator/">https://www.fibre2fashion.com/fashion-accelerator/</a>)</div>
+            <div class='description'>
+                Played a role on Ideation, Develop, Implemenation and scale of online marketing platform for fashion industry.
+                <div class="clear"></div>
+                Technology used,
+                <div class="clear"></div>
+                <ul>
+                    <li>
+                        Ruby on Rails
+                    </li>
+                    <li>
+                      Integration with Amazon, Flipkart, Jabbong
+                    </li>
+                    <li>
+                        Google map based geo search.
+                    </li>
+                    <li>
+                      Hosted on Nginx, with Mysql.
+                    </li>
+                </ul>
+            </div>
+          </li>
+        </ol>
+      </div>
+      <div class='work'>
+        <h4>
           <span class="left">Independent Consultant</span>
-          <span  class="right">Nov 2016 - Present</span></h4>
+          <span  class="right">Nov 2016 - Oct 2017</span></h4>
         <div class="clear"></div>
         <ol>
           <li>
@@ -159,7 +263,8 @@
             </div>
           </li>
         </ol>
-      </div>      <div class='work'>
+      </div>
+      <div class='work'>
         <h4>
           <span class="left">Senior Product Engineer - Scripbox.com</span>
           <span  class="right">Feb 2016 - Nov 2016</span></h4>
