update ruby & jekyll versions

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ meta_description: Jai Keerthi about
   </p>
 
   <p>
-    say <a href="http://www.twitter.com/kjaikeerthi" target="_blank">hello on twitter</a> or email me <a href="email:jai@eatwithus.in">jai@eatwithus.in</a>!
+    say <a href="http://www.twitter.com/kjaikeerthi" target="_blank">hello on twitter</a> or email me <a href="email:jai@coducer.com">jai@coducer.com</a>!
   </p>
 </div>
 
